modern/modernized theme: fix padding/width for editor preview
The preview had too much padding, so for some specific browser window width,
it sometimes showed (wide) content differently than the normal page view.

See: http://moinmo.in/MoinMoinBugs/ModernPreviewPaddingTooMuch

--- a/MoinMoin/web/static/htdocs/modern/css/screen.css
+++ b/MoinMoin/web/static/htdocs/modern/css/screen.css
@@ -387,7 +387,8 @@ textarea {
 
 #preview, #previewbelow {
     border: 1px solid #6C7680;
-    padding: 10px 30px 20px 30px;
+    padding: 3px;
+    width: 100%;
     background: url(../img/draft.png);
     margin-top: 0.5em;
 }
